# procureAI

./: .env.example  .gcloudignore  .gitignore  LESSONS_LEARNED.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
api/: drafter_api.py
builder/: clause_generator.py  config.py  document_processor.py  extractor_prompts.py  review_cli.py  rule_extractor.py  section_splitter.py  shacl_generator.py  telugu_generator.py  test_case_generator.py  vector_loader.py
data/: risk_typology.json  vector_concepts_calibrated.json
docs/: DEMO_SCRIPT.md  TECHNICAL_PROPOSAL.md  architecture-gcp.md
engines/: __init__.py  classifier.py  parameter_cascade.py
frontend/: .env.example  .gitignore  Dockerfile  cloudbuild.yaml  package-lock.json  package.json  portal.html  tailwind.config.ts
knowledge_layer/: clause_store.py  database.py  models.py  rule_store.py  schemas.py  shacl_store.py  vector_store.py
migrations/: 002_reviewers.sql  003_audio.sql  env.py  supabase_schema.sql
ontology/: ap_procurement_base.ttl
review_portal/: index.html
scripts/: bid_abc_check.py  bid_blacklist_check.py  bid_class_check.py  bid_compliance_documents_check.py  bid_emd_validity_check.py  bid_equipment_check.py  bid_financial_turnover_check.py  bid_jv_consortium_check.py  bid_litigation_check.py  bid_personnel_check.py  bid_similar_works_check.py  bid_solvency_check.py  bid_turnover_check.py  calibrate_vector_thresholds.py  check_review_progress.py  classify_rules.py  download_sources.py  draft_tender.py  generate_shacl_shapes.py  group_emd_check.py  load_clause_results.py  (+59 more)
(+427 files in other folders)
